css change to user-select (stops text flickering)

--- a/demo/css/xiNET.css
+++ b/demo/css/xiNET.css
@@ -21,7 +21,7 @@
 }
 
 /*you need this to stop horrible looking flickering of text as you drag*/
-svg.XLV {
+svg {
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
